# HuntLototron

./: .gitignire  .gitignore  Dockerfile  Lototron.fig  Makefile  Pipfile  Procfile  README.md  Tree.mdj  alembic.ini  config.py  csv_2_sql_migrate.py  db.py  db.sqlite3  docker-compose.yaml  heartbeat.py  import2.csv  lint.sh  log.txt  logic_core.py  main.py  misc.csv  misc2.csv  pistols.csv  pistols2.csv  pyproject.toml  rifles.csv  rifles2.csv  settings.toml  shotguns 2.csv  shotguns.csv  t_interface.py  terminal_interface.py  test.py
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
HuntLototron/: Procfile  auth_helpers.py  auxilary.py  base_constructs.py  db.sqlite3  db_old.sqlite3  forms.py  key.py  manage.py  settings.py  tokens.py  urls.py  views.py  wsgi.py
alembic/: env.py
api/: match_api.py  router_ammo_types.py  router_analytics.py  router_compounds.py  router_maps.py  router_match.py  router_players.py  router_weapon_types.py  router_weapons.py  service_endpoints.py
app/: config.py  heartbeat.py  main.py  settings.toml
db/: db.sqlite3
designs/: v0_5.fig
lototron/: manage.py
roulette/: admin.py  forms.py  logic_core.py  models.py  urls.py  views.py
stats/: admin.py  forms.py  models.py  tests.py  urls.py  validators.py  views.py
temp/: data.json  db.rar  lototron.csv  push db.txt  stats_ammotype.csv
templates/: base.html  home.html  landing.html  pure_base.html
tests/: conftest.py  creator.py  setup_test_db.py  test_ammo_types.py  test_analytics.py  test_compounds.py  test_maps.py  test_match.py  test_players.py  test_weapon_types.py  (+1 more)
(+212 files in other folders)
