[project]
name = "huntlototron"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.*"

dependencies = [
    "dynaconf>=3.2.11",
    "fastapi>=0.115.12",
    "prometheus-fastapi-instrumentator>=v7.1.0",
    "sentry-sdk>=2.22.0",
    "sqlalchemy",
    "asyncpg",
    "alembic",
    "httpx>=0.28.1",
    "pydantic>=2.12.0",  # Changed from 2.11.7
    "beartype>=0.21.0",
    "uvicorn>=0.38.0",
]

[project.optional-dependencies]
dev = [
    "mock>=4.0.3",
    "pytest>=3.4",
    "pytest-asyncio>=0.26.0",
    "coverage>=7.8.0",
    "freezegun>=1.5.5",
    "ruff>=0.12.11",
    "black==25.9.0",
    "pandas"
]
